# TheReinforceGame

./: README.md  pyproject.toml
.claude/: settings.local.json
assets/: pong.xml
policies/trained_1768748287/: metadata.json
policies/trained_1768759061/: metadata.json
policies/trained_1768862732/: metadata.json
policies/trained_1768874776/: metadata.json
policies/trained_1768875214/: metadata.json
policies/trained_1768875680/: metadata.json
policies/trained_1768876123/: metadata.json
policies/trained_1768876178/: metadata.json
policies/trained_1768878308/: metadata.json
src/agents/: __init__.py  policy_manager.py  rl_trainer.py
src/core/: __init__.py  constants.py  game_state.py  physics_engine.py
src/environment/: __init__.py  pong_env.py
src/visualization/: gui_panels.py  keyboard_handler.py  network_visualizer.py  reward_plotter.py  scene_renderer.py  training_plotter.py  viser_app.py
