[project]
name = "thereinforcement-pong"
version = "0.1.0"
description = "Interactive Pong game with MuJoCo physics, Viser visualization, and RL training"
requires-python = ">=3.10"
dependencies = [
    "mujoco>=3.2.0",
    "viser>=0.2.0",
    "stable-baselines3>=2.3.0",
    "gymnasium>=1.0.0",
    "torch>=2.2.0",
    "websockets>=12.0",
    "numpy>=1.24.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
pong = "src.visualization.viser_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
